--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="disable_1_hour">1 Hour</string>
     <string name="disable_entire_application">Disable Entire Application</string>
     <string name="danger_zone">Danger Zone!</string>
+    <string name="warning_message">Using this feature can cause some unintended side effects for various applications. Use at your own risk.</string>
 </resources>
