--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
     <string name="connecting">Mercury Panel is connecting...</string>
     <string name="connected">Mercury Panel is connected!</string>
     <string name="disconnected">Mercury Panel is disconnected!</string>
+    <string name="chart_title">Queries over 6 Hours</string>
 </resources>
